Added chip manufacturer information.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -25,44 +25,121 @@
 </ul>
 
 
-<h2>Chip Documentation</h2>
+<h2>Chip Documentation</h2> 
+
+<p>
+The list below is based on the subdirectory names of the gcc/config
+directory, which typically matches with the CPU name in the
+configuration name. In some cases, different (but similar) CPUs are
+put into one directory; the names in parentheses list such similar CPU
+names.
+</p>
+
+<p>
+For some machines, there are still support files in the GCC sources,
+but they are not supported anymore: fx80, gmicro(tron), pyramid, spur,
+tahoe. These are listed here just for completeness.
+</p>
 
 <ul>
+ <li>1750a
+  <br>Exact chip name: MIL-STD-1750A processor
+  <br>Manufacturers: various
+  <br><a href="ftp://ftp.fta-berlin.de/pub/crossgcc/1750gals/">Assembler and Simulator source</a>
+  
+ <li>a29k
+  <br>Manufacturer: <a href="http://www.amd.com">AMD</a>
+  <br><a href="http://www.amd.com/products/lpd/29k/29kindex.html">
+   AMD 29k Family Home Page</a>
+  <br><a href="http://www.amd.com/products/lpd/techdocs/techdocs.html#manuals2">
+  AMD 29k Family technical documentation</a>
 
-  <li>The <a href="ftp://ftp.digital.com/pub/Digital/info/semiconductor/literature/dsc-library.html">Alpha
+ <li>alpha: 
+   <br>Manufacturer: <a href="http://www.dec.com">Compaq (DEC)</a>  
+   <br>The <a href="ftp://ftp.digital.com/pub/Digital/info/semiconductor/literature/dsc-library.html">Alpha
   OEM Documentation Library</a> offers the Alpha Architecture
   Handbook, chip hardware manuals, and info on associated core logic
   chipsets.
 
-<p>
+ <li>arc
+  <br>Manufacturer: <a href="http://www.arccores.com">ARC Cores (Argonaut)</a>
 
-  <li><a href="http://developer.intel.com/design/litcentr/index.htm">Intel
-  Pentium design info</a>
+ <li>arm
+   <br>Manufacturer: <a href="http://www.arm.com">ARM</a>, and others
+   <br>Acronym stands for: Advanced RISC Machine
+   <br><a href="http://www.arm.com/Documentation/UserMans/">Reference
+   Manuals and Data Sheets</a>
+   <br><a href="http://www.intel.com/design/strong/">Intel StrongARM Home Page</a>
 
-  <li>Some information about optimizing for x86 processors, links to
+ <li>c4x
+   <br>Manufacturer: <a href="http://www.ti.com">Texas Instruments</a>
+   <br>Exact chip name: TMS320C4X
+   <br><a href="http://www.ti.com/sc/docs/psheets/man_dsp.htm">DSP Manuals</a>
+
+ <li>clipper
+  <br>Manufacturer: <a href="http://www.intergraph.com/">Intergraph</a>
+  <br>Exact machine name: CLIPPER
+
+ <li>convex (c1, c2, c3[248])
+   <br>Manufacturer: <a href="http://www.convex.com/">Convex (HP)</a>
+
+ <li>dsp16xx
+   <br>Manufacturer: <a href="http://www.att.com">AT&amp;T</a>
+
+ <li>elxsi
+  <br>Manufacturer: ELXSI
+  <br>Exact machine name: ELXSI 6400
+  <br><a href="http://nhse.npac.syr.edu/hpccsurvey/orgs/elxsi/elxsi.html">Company and Machine information</a>
+
+ <li>fr30
+   <br>Manufacturer: <a href="http://www.fmap.com.sg/">Fujitsu</a>
+   <br>Acronym stands for: Fujitsu RISC
+   <br><a href="http://www.fmap.com.sg/products/mcu_fr30.htm">FR Overview</a>
+
+ <li>h8300
+   <br>Manufacturer: <a href="http://www.hitachi.com/">Hitachi</a>
+   <br>Exact chip name: H8/300
+   <br><a href="http://semiconductor.hitachi.com/h8/">H8 Homepage</a>
+
+ <li>i370
+   <br>Manufacturer: <a href="http://www.ibm.com">IBM</a>
+
+ <li>i386 (i486, i586, i686, i786)
+   <br>Manufacturer: <a href="http://www.intel.com">Intel</a>
+
+  <br><a href="http://developer.intel.com/design/litcentr/index.htm">Intel
+   Pentium design info</a>
+  <br>Some information about optimizing for x86 processors, links to
   x86 manuals and documentation:
 
   <ul>
     <li><a href="http://www.goof.com/pcg/docs.html">http://www.goof.com/pcg/docs.html</a>
     <li><a href="http://www.agner.org">http://www.agner.org</a>
   </ul>
-
-  <li><a href="http://www.amd.com/K6/k6docs/pdf/21828a.pdf">AMD site
+  <a href="http://www.amd.com/K6/k6docs/pdf/21828a.pdf">AMD site
   with optimization guide for x86</a>
+ <li>i860
+   <br>Manufacturer: <a href="http://www.intel.com">Intel</a>
 
-<p>
+ <li>i960
+   <br>Manufacturer: <a href="http://www.intel.com">Intel</a>
+   <br><a href="http://www.intel.com/design/i960/">i960 home page</a>
 
-  <li><a href="http://www.hp.com/computing/framed/technology/micropro">HPPA
-  information</a>
+ <li>m32r
+  <br>Manufacturer: <a href="http://www.mitsubishi.com">Mitsubishi</a>
+  <br><a href="http://www.mitsubishichips.com/products/mcu/products/32-bit/index.html">M32R/D Site</a>
 
-<p>
+ <li>m68k
+  <br>Manufacturer: <a href="http://www.motorola.com">Motorola</a>
+  <br><a href="http://mot-sps.com/products/microprocessors/32_bit/68k/mc680x0.html">Various m68k
+  info</a>
 
-  <li><a href="http://www.mot.com/SPS/HPESD/prod/0X0">Various m68k
-  info</a> (including user guides in pdf format)
-	
-<p>
+ <li>m88k
+  <br>Manufacturer: <a href="http://www.motorola.com">Motorola</a>
 
-  <li>Various MIPS stuff:
+ <li>mips (mipsel, mips64, mips64el)
+  <br>The *el variants are little-endian configurations.
+  <br>Various MIPS stuff:
   <ul>
     <li><a href="http://www.sgi.com/MIPS/arch/mips4docs/mipsiv_3_2.pdf">
 	http://www.sgi.com/MIPS/arch/mips4docs/mipsiv_3_2.pdf</a>
@@ -77,6 +154,59 @@
     <li><a href="http://www.sgi.com/MIPS/arch/ISA5/MIPSVspec.pdf">
 	http://www.sgi.com/MIPS/arch/ISA5/MIPSVspec.pdf</a>
   </ul>
+
+ <li>mn10200
+  <br>Manufacturer: Matsushita
+
+ <li>mn10300
+
+ <li>ns32k
+  <br>Manufacturer: <a href="http://www.national.com">National Semiconductor</a>
+  <br><a href="http://www.national.com/pf/NS/NS32FX200.html">NS32FX200 Home Page</a>
+
+ <li>pa (hppa1.0, hppa1.1)
+  <br>Manufacturer: <a href="http://www.hp.com">HP</a>
+  <br>Acronym stands for: Hewlett-Packard Precision Architecture
+  <br><a href="http://www.hp.com/computing/framed/technology/micropro">HPPA
+  information</a>
+
+ <li>pdp11
+  <br>Manufacturer: <a href="http://www.dec.com">DEC (Compaq)</a>
+  <br><a href="http://www.village.org/pdp11/faq.html">PDP-11 FAQ</a>
+  <br><a href="ftp://ftp.digital.com/pub/DEC/sim/">Simulators</a>
+
+ <li>romp
+  <br>Manufacturer: <a href="http://www.ibm.com">IBM</a>
+  <br>Acronym stands for: Research/Office Products MicroProcessor
+  <br>The ROMP was the processor inside the IBM PC/RT.
+  <br><a href="http://www.jmas.co.jp/FAQs/ibm-rt-faq/hardware">PC/RT hardware FAQ</a>
+
+ <li>rs6000 (powerpc, powerpcle)
+  <br>Manufacturer: <a href="http://www.ibm.com">IBM</a>,
+       <a href="http://www.motorola.com/">Motorola</a>
+  <br><a href="http://www.rs6000.ibm.com/doc_link/en_US/a_doc_lib/aixassem/alangref/toc.htm">AIX V4.3 Assembler Language Ref.</a>
+
+ <li>sh
+  <br>Manufacturer: <a href="http://www.hitachi.com">Hitachi</a>
+  <br>Exact chip name: SuperH
+  <br><a href="http://semiconductor.hitachi.com/superh/">SuperH Home Page</a>
+
+ <li>sparc (sparclite, sparc64)
+  <br>Manufacturer: <a href="http://www.sun.com">Sun</a>
+  <br>Acronym stands for: Scalable Processor ARChitecture
+  <br><a href="http://www.sun.com/microelectronics/manuals/index.html">
+  SPARC manuals</a>
+
+ <li>v850
+  <br>Manufacturer: <a href="http://www.nec.com">NEC</a>
+
+ <li>vax
+  <br>Manufacturer: <a href="http://www.dec.com">DEC (Compaq)</a>
+  <br><a href="http://www.digital.com/info/DTJ700/">NVAX articles</a>
+
+ <li>we32k
+  <br>Manufacturer: <a href="http://www.att.com">AT&amp;T</a>
+  <br><a href="http://cua6.csuohio.edu/~bob/3b2faq.html">AT&amp;T 3B2 FAQ</a>
 
 </ul>
 
@@ -167,7 +297,7 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
 <p><a href="index.html">Return to the egcs home page</a>
 
 <hr>
-<i>Last modified on August 16, 1999.</i>
+<i>Last modified on September 22, 1999.</i>
 
 </body>
 </html>
