Updated ARM references, as requested by Richard Earnshaw

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -65,11 +65,9 @@ tahoe. These are listed here just for completeness.
   <br>Manufacturer: <a href="http://www.arccores.com">ARC Cores (Argonaut)</a>
 
  <li>arm
-   <br>Manufacturer: <a href="http://www.arm.com">ARM</a>, and others
-   <br>Acronym stands for: Advanced RISC Machine
+   <br>Manufacturer: Various, by licence from <a href="http://www.arm.com">ARM</a>
    <br><a href="http://www.arm.com/Documentation/UserMans/">Reference
    Manuals and Data Sheets</a>
-   <br><a href="http://www.intel.com/design/strong/">Intel StrongARM Home Page</a>
 
  <li>c4x
    <br>Manufacturer: <a href="http://www.ti.com">Texas Instruments</a>
