Changed ARM reference Updated mn10300 information

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -65,9 +65,9 @@ tahoe. These are listed here just for completeness.
   <br>Manufacturer: <a href="http://www.arccores.com">ARC Cores (Argonaut)</a>
 
  <li>arm
-   <br>Manufacturer: Various, by licence from <a href="http://www.arm.com">ARM</a>
-   <br><a href="http://www.arm.com/Documentation/UserMans/">Reference
-   Manuals and Data Sheets</a>
+  <br>Manufacturer: Various, by licence from <a href="http://www.arm.com">ARM</a>
+  <br>CPUs include: ARM7 and ARM7T series (eg. ARM7TDMI), ARM9 and StrongARM
+  <br><a href="http://www.arm.com/Documentation/">ARM Documentation</a>
 
  <li>c4x
    <br>Manufacturer: <a href="http://www.ti.com">Texas Instruments</a>
@@ -154,9 +154,11 @@ tahoe. These are listed here just for completeness.
   </ul>
 
  <li>mn10200
-  <br>Manufacturer: Matsushita
+  <br>Manufacturer: <a href="http://www.mei.co.jp/">Matsushita</a>
 
  <li>mn10300
+  <br>Manufacturer: <a href="http://www.mei.co.jp/">Matsushita</a>
+  <br>Alternate chip name: AM30
 
  <li>ns32k
   <br>Manufacturer: <a href="http://www.national.com">National Semiconductor</a>
