Updated ARM, i370, and Matsushita information.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -64,7 +64,7 @@ tahoe. These are listed here just for completeness.
  <li>arc
   <br>Manufacturer: <a href="http://www.arccores.com">ARC Cores (Argonaut)</a>
 
- <li>arm
+ <li>arm (armv2, thumb)
   <br>Manufacturer: Various, by licence from <a href="http://www.arm.com">ARM</a>
   <br>CPUs include: ARM7 and ARM7T series (eg. ARM7TDMI), ARM9 and StrongARM
   <br><a href="http://www.arm.com/Documentation/">ARM Documentation</a>
@@ -101,6 +101,7 @@ tahoe. These are listed here just for completeness.
 
  <li>i370
    <br>Manufacturer: <a href="http://www.ibm.com">IBM</a>
+   <br><a href="http://www.s390.ibm.com/">S/390 Home Page</a>
 
  <li>i386 (i486, i586, i686, i786)
    <br>Manufacturer: <a href="http://www.intel.com">Intel</a>
@@ -154,11 +155,13 @@ tahoe. These are listed here just for completeness.
   </ul>
 
  <li>mn10200
-  <br>Manufacturer: <a href="http://www.mei.co.jp/">Matsushita</a>
+  <br>Manufacturer: <a href="http://www.psdc.com/">Matsushita</a>
+  <br><a href="http://psdc.com/micros/mn102.htm">Chip Documentation</a>
 
  <li>mn10300
-  <br>Manufacturer: <a href="http://www.mei.co.jp/">Matsushita</a>
+  <br>Manufacturer: <a href="http://www.psdc.com/">Matsushita</a>
   <br>Alternate chip name: AM30
+  <br><a href="http://psdc.com/micros/mn103.htm">Chip Documentation</a>
 
  <li>ns32k
   <br>Manufacturer: <a href="http://www.national.com">National Semiconductor</a>
