--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -44,58 +44,146 @@ i
 <br><br>
 <h1>The GCJ FAQ</h1>
 
+<P>The latest version of this document is always available at
+<A HREF="http://sourceware.cygnus.com/java/faq.html">
+http://sourceware.cygnus.com/java/faq.html</A>.</P>
+
+<OL>
+   <LI><A HREF="#1_0">General Questions</A>
+   <OL>
+      <LI><A HREF="#1_1">What license is used for libgcj?</A>
+      <LI><A HREF="#1_2">How can I report a bug in libgcj?</A>
+      <LI><A HREF="#1_3">How can I contribute to libgcj?</A>
+      <LI><A HREF="#1_4">Why isn't libgcj part of GCC?</A>
+      <LI><A HREF="#1_5">Will gcj and libgcj work on my machine?</A>
+      <LI><A HREF="#1_6">How can I debug my Java program?</A>
+   </OL>
+   <LI><A HREF="#2_0">Build Questions</A>
+   <OL>
+   </OL>
+   <LI><A HREF="#3_0">Gcj Compile/Link Questions</A>
+   <OL>
+      <LI><A HREF="#3_1">Why do I get <tt>undefined reference to `main'</tt> errors?</A>
+   </OL>
+   <LI><A HREF="#4_0">Runtime Questions</A>
+   <OL>
+      <LI><A HREF="#4_1">My program is dumping core!  What's going on?</A>
+      <LI><A HREF="#4_2">When I run the debugger I get a SEGV in the GC!  What's going on?</A>
+   </OL>
+</OL>
+
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
  <th align="left">
- General FAQ
+ <A NAME="1_0"><h2>General Questions</h2></A>
  </th>
 </tr>
 </table>
 <br>
 
     <dl>
-      <dt>What license is used for libgcj?</dt>
+      <dt><h3><a name="1_1">1.1 What license is used for libgcj?</a></h3></dt>
+      <p>
       <dd>libgcj is distributed under the Library GPL.</dd>
+      </p>
 
-      <dt>How can I report a bug in libgcj?</dt>
+      <dt><hr><h3><a name="1_2">1.2 How can I report a bug in libgcj?</a></h3></dt>
+      <p>
       <dd>libgcj has a corresponding
 	<a
       href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Gnats
 	  bug database</a> which you can browse.  You can also submit new
 	bug reports from the Gnats page.</dd>
+      </p>
 
-      <dt>How can I contribute to libgcj?</dt>
+      <dt><hr><h3><a name="1_3">1.3 How can I contribute to libgcj?</a></h3></dt>
+      <p>
       <dd>You can send simple bug fixes in as patches.  Please follow
 	the <a href="http://egcs.cygnus.com/contribute.html">GCC guidelines
 	for submitting patches</a>.
 	For more complex changes, you must sign copyright over to
 	Cygnus.  See the <a href="contrib.html">contribution</a> page
 	for details.</dd>
+      </p>
 
-      <dt>How can I debug my Java program?</dt>
-      <dd><a href="ftp://ftp.gnu.org/pub/gnu/gdb/gdb-4.18.tar.gz">gdb
-	4.18</a> includes support for debugging gcj-compiled Java
-	programs.</dd>
-
-      <dt>Why isn't libgcj part of GCC?</dt>
+      <dt><hr><h3><a name="1_4">1.4 Why isn't libgcj part of GCC?</a></h3></dt>
+      <p>
       <dd>Various minor reasons.  It's likely that libgcj will end up
 	in GCC at some point in the future.</dd>
+      </p>
 
-      <dt>Will gcj and libgcj work on my machine?</dt>
+      <dt><hr><h3><a name="1_5">1.5 Will gcj and libgcj work on my machine?</a></h3></dt>
+      <p>
       <dd>So far gcj and libgcj have only really been tried on Sparc
 	Solaris and x86 Linux.  They might work on other systems, but
 	we don't know.  Generally speaking, porting to a new system
 	should not be hard.  This would be a good way to volunteer.</dd>
+      </p>
 
-      <dt>My program is dumping core!  What's going on?</dt>
+      <dt><hr><h3><a name="1_6">1.6 How can I debug my Java program?</a></h3></dt>
+      <p>
+      <dd><a href="ftp://ftp.gnu.org/pub/gnu/gdb/gdb-4.18.tar.gz">gdb
+	4.18</a> includes support for debugging gcj-compiled Java
+	programs.</dd>
+      </p>
+
+    </dl>
+
+<table border="0" cellpadding="4" width="95%">
+<tr bgcolor="#b0d0ff">
+ <th align="left">
+ <A NAME="2_0"><h2>Build Questions</h2></A>
+ </th>
+</tr>
+</table>
+    <dl>
+    </dl>
+
+<table border="0" cellpadding="4" width="95%">
+<tr bgcolor="#b0d0ff">
+ <th align="left">
+ <A NAME="3_0"><h2>Gcj Compile/Link Questions</h2></A>
+ </th>
+</tr>
+</table>
+    <dl>
+
+      <dt><h3><a name="3_1">3.1 Why do I get <tt>undefined reference to `main'</tt> errors?</a></h3></dt>
+      <p>
+      <dd>When using <tt>gcj</tt> to link a Java program, you must use
+        the <tt>--main=</tt> option to indicate the class that has the
+	desired <tt>main</tt> method.</dd>
+      </p>
+    </dl>
+
+<table border="0" cellpadding="4" width="95%">
+<tr bgcolor="#b0d0ff">
+ <th align="left">
+ <A NAME="4_0"><h2>Runtime Questions</h2></A>
+ </th>
+</tr>
+</table>
+    <dl>
+
+      <dt><h3><a name="4_1">4.1 My program is dumping core!  What's going on?</a></h3></dt>
+      <p>
       <dd>I could be any number of things.  One common mistake is 
         having your <tt>CLASSPATH</tt> environment variable pointing
 	at a third party's java.lang and friends.  Either
 	unset <tt>CLASSPATH</tt>, or make sure it does not refer to 
         core libraries other than those found in libgcj.zip.</dd>
+      </p>
 
+      <dt><hr><h3><a name="4_2">4.2 When I run the debugger I get a SEGV in the GC! What's going on?</a></h3></dt>
+      <p>
+      <dd>This is "normal"; the Garbage Collector (GC) uses it to determine
+        stack boundaries.  It is ordinarily caught and handled by the GC --
+	you can see this in the debugger by using <tt>cont</tt> to continue
+	to the "real" segv.</dd>
+      </p>
     </dl>
 
+<br>
 </td></tr>
 </table>
 
@@ -105,7 +193,7 @@ i
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: faq.html,v 1.5 1999/09/07 00:18:38 green Exp $
+$Id: faq.html,v 1.1 1999/09/07 00:34:01 green Exp $
 </small>
 </address>
 
