--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -5,58 +5,48 @@
 <body>
 <h1 align="center">GCC mailing lists</h1>
 
-
-If you have problems sending mail to the GCC mailing lists, note that
-we block spam sites and open mail relays by subscribing to
-<a href="http://maps.vix.com/rbl/">MAPS
-RBL</a> and <a href="http://www.orbs.org/">ORBS</a>. Please do not
-complain to us, but ask your server admin to fix his setup.
-
-<p>Please read the subscribe/unsubscribe instructions carefully.  They 
-may have changed since you last visited this page.
-
+<p>The GCC project has many mailing lists:
 
 <ul>
-  <li><b><a href="http://egcs.cygnus.com/ml/gcc-announce/">gcc-announce</a></b>
+  <li><b><a href="/ml/gcc-announce/">gcc-announce</a></b>
   is a read-only low volume list where
   we post announcements about releases or other important events.
 
-  <li><b><a href="http://egcs.cygnus.com/ml/gcc/">gcc</a></b>
+  <li><b><a href="/ml/gcc/">gcc</a></b>
   is a high volume list for general development discussions about gcc.
   Anything not
   covered by other mailing lists is suitable for discussion on <b>gcc</b>.
 
-  <li><b><a href="http://egcs.cygnus.com/ml/gcc-help/">gcc-help</a></b>
+  <li><b><a href="/ml/gcc-help/">gcc-help</a></b>
   is a relatively high volume list for people searching for help in building
   gcc.
 
-  <li><b><a href="http://egcs.cygnus.com/ml/gcc-bugs/">gcc-bugs</a></b>
+  <li><b><a href="/ml/gcc-bugs/">gcc-bugs</a></b>
   is a relatively high volume list for bug reports and general discussion
   about bugs in gcc.
 
-  <li><b><a href="http://egcs.cygnus.com/ml/gcc-patches/">gcc-patches</a></b>
+  <li><b><a href="/ml/gcc-patches/">gcc-patches</a></b>
   is a relatively high volume list for patch submissions and discussion of
   particular patches.  All patch submissions and all discussion for a
   particular patch should be sent to <b>gcc-patches</b>.
 
-  <li><b><a href="http://egcs.cygnus.com/ml/gcc-cvs/">gcc-cvs</a></b>
+  <li><b><a href="/ml/gcc-cvs/">gcc-cvs</a></b>
   is a read-only, relatively high volume list which tracks checkins to the
   gcc CVS repository.
 
-  <li><b><a href="http://egcs.cygnus.com/ml/gcc-cvs-wwwdocs/">gcc-cvs-wwwdocs</a></b>
+  <li><b><a href="/ml/gcc-cvs-wwwdocs/">gcc-cvs-wwwdocs</a></b>
   is a read-only, relatively low volume list which tracks checkins to
   the gcc webpages CVS repository.
 
-  <li><b><a href="http://egcs.cygnus.com/ml/gcc-testresults/">
+  <li><b><a href="/ml/gcc-testresults/">
   gcc-testresults</a></b> is a moderate volume list where test results for
   the gcc compilers are posted.
 </ul>
 
-<p>To post a message, just send mail to
-<i>listname</i><tt>@gcc.gnu.org</tt>.
+<p>To post a message, just send mail to <i>listname</i><tt>@gcc.gnu.org</tt>.
 
 
-<a name="msgsize"><h2>Policies</h2></a>
+<h2><a name="msgsize">Policies</a></h2>
 
 <p>All the lists have a maximum message size.  If your message exceeds
 more than 100kbytes, you should compress any attachments before sending
@@ -71,14 +61,14 @@ and try to avoid cross posting a message to several lists.
 <h2>Archives</h2>
 
 <p>Web archives for all mailing lists are on-line
-(<a href="http://egcs.cygnus.com/ml/gcc-announce/">gcc-announce</a>,
-<a href="http://egcs.cygnus.com/ml/gcc/">gcc</a>,
-<a href="http://egcs.cygnus.com/ml/gcc-bugs/">gcc-bugs</a>,
-<a href="http://egcs.cygnus.com/ml/gcc-help/">gcc-help</a>,
-<a href="http://egcs.cygnus.com/ml/gcc-patches/">gcc-patches</a>,
-<a href="http://egcs.cygnus.com/ml/gcc-cvs/">gcc-cvs</a>,
-<a href="http://egcs.cygnus.com/ml/gcc-cvs-wwwdocs/">gcc-cvs-wwwdocs</a>, and
-<a href="http://egcs.cygnus.com/ml/gcc-testresults/">gcc-testresults</a>),
+(<a href="/ml/gcc-announce/">gcc-announce</a>,
+<a href="/ml/gcc/">gcc</a>,
+<a href="/ml/gcc-bugs/">gcc-bugs</a>,
+<a href="/ml/gcc-help/">gcc-help</a>,
+<a href="/ml/gcc-patches/">gcc-patches</a>,
+<a href="/ml/gcc-cvs/">gcc-cvs</a>,
+<a href="/ml/gcc-cvs-wwwdocs/">gcc-cvs-wwwdocs</a>, and
+<a href="/ml/gcc-testresults/">gcc-testresults</a>),
 plus you can also <a href="ftp://egcs.cygnus.com/pub/gcc/mail-archives/">
 download mbox formatted archives of each mailing list</a>.
 
@@ -89,33 +79,82 @@ the search function, send a copy to
 <a href="mailto:hp@bitrange.com">hp@bitrange.com</a>.
 
 
-<h2>Subscription</h2>
+<h2>Subscribing/unsubscribing</h2>
 
-<p>To subscribe to a list, send a blank mail to
-<code><i>listname</i>-subscribe@gcc.gnu.org</code>
+<p>You will be able to subscribe or unsubscribe from any of the GCC mailing
+lists via this form:
 
-<p>To unsubscribe, send a blank mail to 
-<code><i>listname</i>-unsubscribe@gcc.gnu.org</code>
+<blockquote>
+<form method="get" action="/cgi-bin/ml-request">
+  Mailing list: 
+  <select name="listname">
+   <option value="gcc-announce">gcc-announce
+   <option value="gcc">gcc
+   <option value="gcc-help">gcc-help
+   <option value="gcc-bugs">gcc-bugs
+   <option value="gcc-patches">gcc-patches
+   <option value="gcc-cvs">gcc-cvs
+   <option value="gcc-cvs-wwwdocs">gcc-cvs-wwwdocs
+   <option value="gcc-testresults">gcc-testresults
+  </select>
+  <tt>&nbsp;</tt>
+  Your e-mail address:
+  <input type="text" name="username" size="14">
+ <br>
+  <input type="checkbox" name="digest">Digest version
+  <tt>&nbsp;</tt>
+  <select name="operation">
+    <option value="subscribe">subscribe
+    <option value="unsubscribe">unsubscribe
+  </select>
+  <tt>&nbsp;</tt>
+ <input type="Submit" name="submit" value="Process that!">
+</form>
+</blockquote>
 
-<p>Each list also has a digest, which you can subscribe to by sending mail
-to
-<code><i>listname</i>-digest-subscribe@gcc.gnu.org</code>
+<p>If you're having trouble getting off a list, look at the
+<b><tt>List-Unsubscribe:</tt></b> header.  It has your subscribed address
+included in it.  Send mail to that address (omit the <tt>mailto:</tt>
+part) and you'll be unsubscribing yourself from that mailing list.
+You'll need to confirm the unsubscription, of course.
 
+<p>Please trust in the <tt>List-Unsubscribe:</tt> header.  Every person
+who has said "I can't get off this list!  Unsubscribe me!" has found,
+with enough prodding, that sending mail to the address listed in
+<tt>List-Unsubscribe:</tt> does the trick.
 
 <h2>Help</h2>
 
 <p>For further information on using the lists, send a blank mail to
 <code><i>listname</i>-help@gcc.gnu.org</code>.</p>
 
-<p>As a <em>last</em> resort, for example if you want to unsubscribe
-while your mail server is listed by ORBS, contact <a
-href="mailto:law@cygnus.com">law@cygnus.com</a>.</p>
+<h2>Spam blocking</h2>
+
+<p>To reduce spam sent to the GCC mailing lists, a handful of Realtime
+Blackhole Lists (RBLs) are consulted.  If you're sending mail from a
+site that is listed in one of these RBLs, contact your site administrator
+about fixing your mail setup.  Spammers are taking advantage of your
+site to relay their spam.
+
+<p>The following RBLs are consulted on all e-mail before it is distributed:
+<a href="http://www.mail-abuse.org/rbl/">MAPS RBL</a>, 
+<a href="http://www.mail-abuse.org/rss/">MAPS RSS</a>, 
+<a href="http://www.orbs.org/">ORBS</a>, 
+<a href="http://www.mail-abuse.org/dul/">MAPS DUL</a>, and 
+<a href="http://www.imrss.org/dssl/">DSSL</a>.
+
+
+<p>To complicate the harvesting of e-mail addresses from the web archives
+of the GCC mailing lists, some simple transformations are done on the
+e-mail addresses.  It isn't perfect, but short of destructively modifying
+addresses or omitting addresses altogether, there isn't a whole lot we
+can do right now.
 
 <hr>
-<p><a href="index.html">Return to the gcc home page</a>
+<p><a href="/">Return to the gcc home page</a>
 
 <hr>
-<p><i>Last modified:  September 21, 1999</i>
+<p><i>Last modified:  September 28, 1999</i>
 
 </body>
 </html>
