1999-09-28  Jason Molenda  (jsm@bugshack.cygnus.com)
	* lists.html:  Small typeo in the text I just committed.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -113,10 +113,10 @@ lists via this form:
 </blockquote>
 
 <p>If you're having trouble getting off a list, look at the
-<b><tt>List-Unsubscribe:</tt></b> header.  It has your subscribed address
-included in it.  Send mail to that address (omit the <tt>mailto:</tt>
-part) and you'll be unsubscribing yourself from that mailing list.
-You'll need to confirm the unsubscription, of course.
+<b><tt>List-Unsubscribe:</tt></b> header on a message sent to that list.
+It has your subscribed address included in it.  Send mail to that address
+(omit the <tt>mailto:</tt> part) and you'll be unsubscribing yourself from
+that mailing list.  You'll need to confirm the unsubscription, of course.
 
 <p>Please trust in the <tt>List-Unsubscribe:</tt> header.  Every person
 who has said "I can't get off this list!  Unsubscribe me!" has found,
