--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -8,6 +8,9 @@
 <p><b>alpha-dec-osf4.0b</b><br>
 Successful
 
+<p><b>alpha-dec-osf4.0e</b><br>
+Successful
+
 <p><b>alpha-dec-osf4.0f</b><br>
 Successful
 
@@ -148,7 +151,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on September 21, 1999.</i>
+<i>Last modified on September 30, 1999.</i>
 
 </body>
 </html>
