Recommend upgrading from egcs 1.1.x before reporting a bug. Fix gcc vs GCC issue.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -197,11 +197,11 @@ the GNU <tt>info</tt> program is installed on your system by `<tt>info --node
 included with the GCC source code.</p>
 
 <p>Before you report a bug for the <em>C++ compiler</em>, please check
-the <a href="bugs.html">list of well-known bugs</a>. If you
-want to report a bug with <em>egcs 1.0.x</em>, we recommend upgrading
-to the current release first.</p>
+the <a href="bugs.html">list of well-known bugs</a>. If you want to
+report a bug with <em>egcs 1.0.x</em> or <em>egcs 1.1.x</em>, we
+strongly recommend upgrading to the current release first.</p>
 
-<p>In short, if gcc says <tt>Internal compiler error</tt> (or any
+<p>In short, if GCC says <tt>Internal compiler error</tt> (or any
 other error that you'd like us to be able to reproduce, for that
 matter), please mail a bug report to <a
 href="mailto:gcc-bugs@gcc.gnu.org">gcc-bugs@gcc.gnu.org</a> or
@@ -1139,7 +1139,7 @@ is declared pure-virtual [class.dtor]/7.</p>
 <hr>
 
 <p><a href="index.html">Return to the GCC home page</a></p>
-<p><i>Last modified:  August 30, 1999</i></p>
+<p><i>Last modified:  October 2, 1999</i></p>
 
 </body>
 </html>
