--- a/htdocs/java/thanks.html
+++ b/htdocs/java/thanks.html
@@ -63,6 +63,7 @@ Please keep this list in alphabetical order.
 <li>Geoff Berry for his object serialization work and various patches.
 <li>Hans-J. Boehm for his <a href="http://reality.sgi.com/boehm/gc.html">garbage collector</a>.
 <li>Per Bothner for dreaming up, designing and implementing much of gcj.
+<li>Steve Chamberlain for config fixes and the picoJava port.
 <li>Jean-Marc Chandonia for various library patches.
 <li>Eric Christopher for his porting help and clean-ups.
 <li>The GCC project <a
@@ -120,7 +121,7 @@ Thank you all!
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: thanks.html,v 1.4 1999/09/06 19:37:27 green Exp $
+$Id: thanks.html,v 1.1 1999/09/07 00:34:01 green Exp $
 </small>
 </address>
 
