--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-<title>egcs Links and Selected Readings</title>
-<meta name="title" content="egcs Links and Selected Reading">
-<meta name="keywords" content="egcs, compilers, optimization, documentation, FAQ, standards">
+<title>Links and Selected Readings</title>
+<meta name="title" content="Links and Selected Readings">
+<meta name="keywords" content="GCC, compilers, optimization, documentation, FAQ, standards">
 </head>
 
 <body>
-<h1 align="center">egcs: Links and Selected Readings</h1>
+<h1 align="center">Links and Selected Readings</h1>
 
 
 <h2>GCC-specific Literature</h2>
@@ -297,10 +297,10 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
 </ul>
  
 <hr>
-<p><a href="index.html">Return to the egcs home page</a>
+<p><a href="index.html">Return to the GCC home page</a>
 
 <hr>
-<i>Last modified on September 23, 1999.</i>
+<i>Last modified on October 4, 1999.</i>
 
 </body>
 </html>
