egcs vs GCC cleanup.

--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-<title>egcs project contributors</title>
+<title>Contributors</title>
 </head>
 <body>
-<h1 align="center">egcs project contributors</h1>
+<h1 align="center">Contributors</h1>
 
 
-The egcs project would like to thank its many contributors.  Without them the
+The GCC project would like to thank its many contributors.  Without them the
 project would not have been nearly as successful as it has been.  Any omissions
 in this list are accidental.  Feel free to contact
 <a href="mailto:law@cygnus.com">law@cygnus.com</a> if you have been left out
@@ -35,7 +35,7 @@ alphabetical order.
   the scenes hacking.
   <li> Ian Dall for major improvements to the NS32k port.
   <li> Ulrich Drepper for his work on the C++ runtime libraries, glibc, 
-  testing of egcs using glibc, ISO C9X support, CFG dumping support, etc.
+  testing of GCC using glibc, ISO C9X support, CFG dumping support, etc.
   <li> Richard Earnshaw for his ongoing work with the ARM.
   <li> David Edelsohn for his direction via the steering committee,
   ongoing work with the RS6000/PowerPC port, and help cleaning up Haifa
@@ -204,7 +204,7 @@ small fixes.
 
 
 We'd also like to thank the folks who have contributed time and energy in
-testing egcs:
+testing GCC:
 <ul>
   <li> David Billinghurst
   <li> Horst von Brand
@@ -247,10 +247,10 @@ testing egcs:
 And finally we'd like to thank everyone who uses the compiler, submits bug
 reports and generally reminds us why we're doing this work in the first place.
 
-<p><i>Last modified:  May 13, 1999</i>
+<p><i>Last modified:  October 5, 1999</i>
 
 <hr>
-<p><a href="index.html">Return to the egcs home page</a>
+<p><a href="index.html">Return to the GCC home page</a>
 
 </body>
 </html>
