--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -11,6 +11,7 @@
 <ul>
   <li><a href="#alpha*-dec-linux*">alpha*-dec-linux*</a></li>
   <li><a href="#alpha*-dec-osf*">alpha*-dec-osf*</a></li>
+  <li><a href="#dos">GCC with DOS</a></li>
   <li><a href="#hppa*-hp-hpux*">hppa*-hp-hpux*</a></li>
   <li><a href="#hppa*-hp-hpux9">hppa*-hp-hpux9</a></li>
   <li><a href="#hppa*-hp-hpux10">hppa*-hp-hpux10</a></li>
@@ -126,6 +127,15 @@ it with the command <code>gcc -shared -o libstdc++.so.2.10.0
 sub-directory exists, repeat this command in it, with the additional
 flag <code>-mieee</code>.</p>
 
+
+<hr>
+<h3><a name="dos">GCC with DOS</h3>
+
+<p>A binary distribution is available at <a
+href="ftp://ftp.simtel.net/pub/simtelnet/gnu/djgpp/">Simtel.Net</A> and its
+mirrors.</p>
+
+
 <hr>
 <h3><a name="hppa*-hp-hpux*">hppa*-hp-hpux*</a></h3>
 
@@ -138,6 +148,7 @@ HP assembler or a recent
 
 <p>More specific information to hppa*-hp-hpux* targets follows.</p>
 
+
 <hr>
 <h3><a name="hppa*-hp-hpux9">hppa*-hp-hpux9</a></h3>
 
@@ -149,6 +160,7 @@ shared libraries from working.  Use the GNU assembler to avoid these problems.</
 <p>The configuration scripts for GCC will also trigger a bug in the hpux9
 shell.  To avoid this problem set CONFIG_SHELL to /bin/ksh and SHELL to
 /bin/ksh in your environment.</p>
+
 
 <hr>
 <h3><a name="hppa*-hp-hpux10">hppa*-hp-hpux10</a></h3>
@@ -176,6 +188,7 @@ bootstrap</code>'.</p>
 <p>If you receive Signal 11 errors when building on GNU/Linux, then it is
 possible you have a hardware problem.  Further information on this can be
 found on <a href="http://www.bitwizard.nl/sig11/">www.bitwizard.nl.</a></p>
+
 
 <hr>
 <h3><a name="ix86-*-sco3.2v5*">i?86-*-sco3.2v5*</a></h3>
@@ -369,6 +382,7 @@ the directory <i>prefix</i> you secified in the configuration preocess of GCC fo
 
 <p>It is reported that you may need the GNU assembler on this platform.</p>
 
+
 <hr>
 <h3><a name="mips*-sgi-irix[45]">mips*-sgi-irix[45]</a></h3>
 
@@ -404,6 +418,7 @@ you do not have GNU make available.</p>
 <p>See <a href="http://reality.sgi.com/ariel/freeware/"> 
 http://reality.sgi.com/ariel/freeware</a> for more information about using GCC on IRIX platforms.</p>
 
+
 <hr>
 <h3><a name="mips*-sgi-irix6">mips*-sgi-irix6</a></h3>
 
@@ -433,6 +448,7 @@ seeing two of them: inet_ntoa, and semctl. </p>
 
 <p>See <a href="http://reality.sgi.com/ariel/freeware/"> 
 http://reality.sgi.com/ariel/freeware</a> for more information about using GCC on IRIX platforms.</p>
+
 
 <hr>
 <h3><a name="powerpc-*-linux-gnu*">powerpc-*-linux-gnu*</a></h3>
@@ -508,11 +524,13 @@ recommend it only for people who use Sun's compilers.</p>
 </ul> 
 </p>
 
+
 <hr>
 <h3><a name="sunv5">Sun V5.0 Compiler Bugs</a></h3>
 The Sun V5.0 compilers are known to mis-compile GCC, which in turn causes
 GCC to fail its bootstrap comparison test.  We expect to have a workaround
 ready in time for GCC 2.95.2.
+
 
 <hr>
 <h3><a name="sparc-sun-sunos*">sparc-sun-sunos*</a></h3>
@@ -533,10 +551,12 @@ from Sun's patch site.</p>
 <a href="ftp://ftp.yggdrasil.com/private/hjl">binutils-2.8.1.0.23</a>
 for this platform, too.</p>
 
+
 <hr>
 <h3><a name="sparc64-*-*">sparc64-*-*</a></h3>
 
 <p>GCC version 2.95 is not able to compile code correctly for <code>sparc64</code> targets.  Users of the Linux kernel, at least, can use the <code>sparc32</code> program to start up a new shell invocation with an environment that causes <code>configure</code> to recognize (via <code>uname -a</code>) the system as <code>sparc-*-*</code> instead.</p>
+
 
 <hr>
 <h3><a name="win+os2"></a>GCC with Windows or OS/2</h3>
@@ -551,12 +571,14 @@ support.
 working on a generic os/2 port with pgcc.  The current code code can be found
 at <a href="http://www.goof.com/pcg/os2/">http://www.goof.com/pcg/os2/</a>.</p>
 
+
 <hr>
 <h3><a name="elf_targets">all ELF targets (SVR4, Solaris, etc.)</a></h3>
 
 <p>C++ support is significantly better on ELF targets if you use the GNU
 linker; duplicate copies of inlines, vtables and template instantiations
 will be discarded automatically.</p>
+
 
 <hr>
 <p><a href="./index.html">Return to the GCC Installation page</a></p>
