Add link to official GNU Y2K statement.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -19,8 +19,9 @@
 <H2>Docs</H2>
 <P>
 <A HREF="faq.html">FAQ</A><BR>
-<A HREF="onlinedocs">Manual</A><BR>
 <A HREF="install/index.html">Installation</A><BR>
+<A HREF="onlinedocs">Manual</A><BR>
+<A HREF="http://www.gnu.org/software/year2000.html">Year 2000</A><BR>
 <A HREF="readings.html">Readings</A>
 </P>
 <H2>Development</H2>
@@ -161,7 +162,7 @@ version 2.95.1</a> Java runtime libraries for use with GCC 2.95.1.
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on September 21, 1999.</i></small>
+<small><i>Last modified on October 8, 1999.</i></small>
 </address>
 
 </body>
