1999-10-09  Jason Molenda  (jsm@bugshack.cygnus.com)
	* wwwdocs/htdocs/badspammer.html:  A cosmetic change to see if
	commit messages still go out.

--- a/htdocs/badspammer.html
+++ b/htdocs/badspammer.html
@@ -3,9 +3,9 @@
 <HEAD><TITLE>The EGCS Project</TITLE>
 </HEAD>
 <BODY>
-<div align="center">
+<DIV align="center">
 <h1><a href="/">The EGCS Project</a></h1>
-</div>
+</DIV>
 
 <h1>Spambot detected</h1>
 
