1999-10-09  Jason Molenda  (jsm@bugshack.cygnus.com)
	* wwwdocs/htdocs/cvs.html:  Update CVSROOT path.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -27,10 +27,10 @@ GCC sources with the following sequence of commands:
 
 <p>Set CVSROOT in your environment to
 
-<blockquote><code>:pserver:anoncvs@anoncvs.cygnus.com:/cvs/egcs</code></blockquote>
+<blockquote><code>:pserver:anoncvs@anoncvs.cygnus.com:/cvs/gcc</code></blockquote>
 
 <p>Or alternately add 
-<blockquote<code>-d :pserver:anoncvs@anoncvs.cygnus.com:/cvs/egcs</code></blockquote>
+<blockquote<code>-d :pserver:anoncvs@anoncvs.cygnus.com:/cvs/gcc</code></blockquote>
 in the CVS commands below (place it immediately after <code>cvs</code>,
 i.e., before any other CVS arguments).
 
@@ -96,7 +96,7 @@ the compiler itself.  Use <code>cvs co wwwdocs</code> to check out
 the web pages.
 
 <hr>
-<i>Last modified on July 29, 1999.</i>
+<i>Last modified on 1999-10-09.</i>
 
 </body>
 </html>
