Replaced cvs/egcs with cvs/gcc

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -35,7 +35,7 @@ your remote machine.  Set CVS_RSH in your environment to "ssh".  Then issue
 the command
 
 <blockquote><code>
-cvs -z 9 -d :ext:username@egcs.cygnus.com:/cvs/egcs co egcs
+cvs -z 9 -d :ext:username@egcs.cygnus.com:/cvs/gcc co egcs
 </code></blockquote>
 
 where <code>username</code> is your user name at egcs.cygnus.com.
@@ -47,7 +47,7 @@ in the normal fashion, including committing changes.
 all the "Root" files in the local tree with the following contents:
 
 <blockquote><code>
-username@egcs.cygnus.com:/cvs/egcs
+username@egcs.cygnus.com:/cvs/gcc
 </code></blockquote>
 
 
