added Gerald as SC member and added a news item

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -105,6 +105,13 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>October 11, 1999</b></dt>
+<dd>
+The gcc <a href="steering.html">steering committee</a> welcomes a new
+member: Gerald Pfeifer. His insights into political issues and his web
+improvement work were and will be of great use.
+</dd>
+
 <dt><b>September 21, 1999</b></dt>
 <dd>
 Nick Clifton of Cygnus Solutions has donated support for the Fujitsu
