--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -254,6 +254,8 @@ tahoe. These are listed here just for completeness.
 
   <li><a href="ftp://sgigate.sgi.com/pub/dwarf/">DWARF v2 spec and sample implementation</a>
 
+  <li><a href="http://www.as400.ibm.com/beyondtech/translator.htm">AS/400 compiler optimizer information</a>
+
 <p>
 
   <li>Modula 3 Stuff:
@@ -300,7 +302,7 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
 <p><a href="index.html">Return to the GCC home page</a>
 
 <hr>
-<i>Last modified on October 4, 1999.</i>
+<i>Last modified on October 10, 1999.</i>
 
 </body>
 </html>
