--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -5,40 +5,45 @@
 <body>
 <h1 align="center">GCC mailing lists</h1>
 
+<!--
+  NOTE: The links to /ml/ must include the hostname, as our mirrors do
+        not have that part of the site!
+-->
+
 <p>The GCC project has many mailing lists:
 
 <ul>
-  <li><b><a href="/ml/gcc-announce/">gcc-announce</a></b>
+  <li><b><a href="http://gcc.gnu.org/ml/gcc-announce/">gcc-announce</a></b>
   is a read-only low volume list where
   we post announcements about releases or other important events.
 
-  <li><b><a href="/ml/gcc/">gcc</a></b>
+  <li><b><a href="http://gcc.gnu.org/ml/gcc/">gcc</a></b>
   is a high volume list for general development discussions about gcc.
   Anything not
   covered by other mailing lists is suitable for discussion on <b>gcc</b>.
 
-  <li><b><a href="/ml/gcc-help/">gcc-help</a></b>
+  <li><b><a href="http://gcc.gnu.org/ml/gcc-help/">gcc-help</a></b>
   is a relatively high volume list for people searching for help in building
   gcc.
 
-  <li><b><a href="/ml/gcc-bugs/">gcc-bugs</a></b>
+  <li><b><a href="http://gcc.gnu.org/ml/gcc-bugs/">gcc-bugs</a></b>
   is a relatively high volume list for bug reports and general discussion
   about bugs in gcc.
 
-  <li><b><a href="/ml/gcc-patches/">gcc-patches</a></b>
+  <li><b><a href="http://gcc.gnu.org/ml/gcc-patches/">gcc-patches</a></b>
   is a relatively high volume list for patch submissions and discussion of
   particular patches.  All patch submissions and all discussion for a
   particular patch should be sent to <b>gcc-patches</b>.
 
-  <li><b><a href="/ml/gcc-cvs/">gcc-cvs</a></b>
+  <li><b><a href="http://gcc.gnu.org/ml/gcc-cvs/">gcc-cvs</a></b>
   is a read-only, relatively high volume list which tracks checkins to the
   gcc CVS repository.
 
-  <li><b><a href="/ml/gcc-cvs-wwwdocs/">gcc-cvs-wwwdocs</a></b>
+  <li><b><a href="http://gcc.gnu.org/ml/gcc-cvs-wwwdocs/">gcc-cvs-wwwdocs</a></b>
   is a read-only, relatively low volume list which tracks checkins to
   the gcc webpages CVS repository.
 
-  <li><b><a href="/ml/gcc-testresults/">
+  <li><b><a href="http://gcc.gnu.org/ml/gcc-testresults/">
   gcc-testresults</a></b> is a moderate volume list where test results for
   the gcc compilers are posted.
 </ul>
@@ -61,14 +66,14 @@ and try to avoid cross posting a message to several lists.
 <h2>Archives</h2>
 
 <p>Web archives for all mailing lists are on-line
-(<a href="/ml/gcc-announce/">gcc-announce</a>,
-<a href="/ml/gcc/">gcc</a>,
-<a href="/ml/gcc-bugs/">gcc-bugs</a>,
-<a href="/ml/gcc-help/">gcc-help</a>,
-<a href="/ml/gcc-patches/">gcc-patches</a>,
-<a href="/ml/gcc-cvs/">gcc-cvs</a>,
-<a href="/ml/gcc-cvs-wwwdocs/">gcc-cvs-wwwdocs</a>, and
-<a href="/ml/gcc-testresults/">gcc-testresults</a>),
+(<a href="http://gcc.gnu.org/ml/gcc-announce/">gcc-announce</a>,
+<a href="http://gcc.gnu.org/ml/gcc/">gcc</a>,
+<a href="http://gcc.gnu.org/ml/gcc-bugs/">gcc-bugs</a>,
+<a href="http://gcc.gnu.org/ml/gcc-help/">gcc-help</a>,
+<a href="http://gcc.gnu.org/ml/gcc-patches/">gcc-patches</a>,
+<a href="http://gcc.gnu.org/ml/gcc-cvs/">gcc-cvs</a>,
+<a href="http://gcc.gnu.org/ml/gcc-cvs-wwwdocs/">gcc-cvs-wwwdocs</a>, and
+<a href="http://gcc.gnu.org/ml/gcc-testresults/">gcc-testresults</a>),
 plus you can also <a href="ftp://egcs.cygnus.com/pub/gcc/mail-archives/">
 download mbox formatted archives of each mailing list</a>.
 
@@ -154,7 +159,7 @@ can do right now.
 <p><a href="/">Return to the gcc home page</a>
 
 <hr>
-<p><i>Last modified:  September 28, 1999</i>
+<p><i>Last modified:  October 12, 1999</i>
 
 </body>
 </html>
