Rotate news items.  Note network and server upgrades.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -105,6 +105,13 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>October 12, 1999</b></dt>
+<dd>
+<a href="http://www.cygnus.com">Cygnus</a> has installed 
+<a href="news/server.html">various upgrades</a> to improve services
+for GCC and other open source projects hosted by Cygnus.
+</dd>
+
 <dt><b>October 11, 1999</b></dt>
 <dd>
 The gcc <a href="steering.html">steering committee</a> welcomes a new
@@ -128,31 +135,6 @@ site</a>.
 Cygnus Solutions has donated two new global optimizers to GCC.
 <a href="news/null.html">Global Null Pointer Test Elimination</a> and
 <a href="news/unify.html">Global Code Hoisting/Unification</a>.
-</dd>
-
-<dt><b>September 3, 1999</b></dt>
-<dd>
-Long time GCC contributors Mark Mitchell and Richard Kenner have been
-given global write permissions.  They are authorized to install and
-approve patches to any part of the compiler.
-
-Richard Kenner will initially be working on merging in the remaining
-changes from the old GCC 2 sources.
-</dd>
-
-<dt><b>September 2, 1999</b></dt>
-<dd>
-Richard Henderson has finished merging the ia32 backend rewrite into the
-mainline GCC sources.  The rewrite is designed to improve optimization
-opportunities for the Pentium II target, but also provides a cleaner
-way to optimize for the Pentium III, AMD-K7 and other high end ia32
-targets as they appear.
-</dd>
-
-<dt><b>August 31, 1999</b></dt>
-<dd>Cygnus Solutions has released 
-<a href="ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.1.tar.gz">libgcj
-version 2.95.1</a> Java runtime libraries for use with GCC 2.95.1.
 </dd>
 
 </dl>
