--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -10,6 +10,31 @@ home page</a>.
 
 <dl>
 
+<dt><b>September 3, 1999</b></dt>
+<dd>
+Long time GCC contributors Mark Mitchell and Richard Kenner have been
+given global write permissions.  They are authorized to install and
+approve patches to any part of the compiler.
+
+Richard Kenner will initially be working on merging in the remaining
+changes from the old GCC 2 sources.
+</dd>
+
+<dt><b>September 2, 1999</b></dt>
+<dd>
+Richard Henderson has finished merging the ia32 backend rewrite into the
+mainline GCC sources.  The rewrite is designed to improve optimization
+opportunities for the Pentium II target, but also provides a cleaner
+way to optimize for the Pentium III, AMD-K7 and other high end ia32
+targets as they appear.
+</dd>
+
+<dt><b>August 31, 1999</b></dt>
+<dd>Cygnus Solutions has released
+<a href="ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.1.tar.gz">libgcj
+version 2.95.1</a> Java runtime libraries for use with GCC 2.95.1.
+</dd>
+
 <dt><b>August 19, 1999</b></dt>
 <dd>
 <a href="gcc-2.95/gcc-2.95.1.html">GCC 2.95.1 is released</a>.
@@ -376,7 +401,7 @@ framework</b></a>.
 </dl>
 
 <hr>
-<i>Last modified on September 20, 1999.</i>
+<i>Last modified on October 12, 1999.</i>
 
 </body>
 </html>
