* faq.html: Updated link for faq to be relative instead of absolute. 	* gcj2.html: Updated links for libgcj info from dead pages.

--- a/htdocs/java/gcj2.html
+++ b/htdocs/java/gcj2.html
@@ -64,7 +64,7 @@ href="http://egcs.cygnus.com/">GCC</a> project.
 
     <p>In order to make full executables, you'll need to link the
     output of gcj with the appropriate runtime code.  See <a
-    href="libgcj.html">the libgcj page</a> for details on downloading
+    href="libgcj2.html">the libgcj page</a> for details on downloading
     and installing this runtime.
 
     <p>There are also <a href="compile.html">more detailed
@@ -77,7 +77,7 @@ it is it fully integrated into GCC, you can simply follow the <a
 href="http://egcs.cygnus.com/cvs.html">GCC download and build
 instructions</a>.  Note that you'll want to configure GCC to use the
 appropriate threads system; see <a
-href="libgcj.html">the libgcj page</a> for details.
+href="libgcj2.html">the libgcj page</a> for details.
 
 <h2>How to try it</h2>
 
