--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -45,8 +45,7 @@ i
 <h1>The GCJ FAQ</h1>
 
 <P>The latest version of this document is always available at
-<A HREF="http://sourceware.cygnus.com/java/faq.html">
-http://sourceware.cygnus.com/java/faq.html</A>.</P>
+<A HREF="faq.html">http://sourceware.cygnus.com/java/faq.html</A>.</P>
 
 <OL>
    <LI><A HREF="#1_0">General Questions</A>
@@ -217,7 +216,7 @@ http://sourceware.cygnus.com/java/faq.html</A>.</P>
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: faq.html,v 1.2 1999/09/28 08:41:40 warrenl Exp $
+$Id: faq.html,v 1.3 1999/10/13 01:24:26 warrenl Exp $
 </small>
 </address>
 
