--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -30,7 +30,7 @@ GCC sources with the following sequence of commands:
 <blockquote><code>:pserver:anoncvs@anoncvs.cygnus.com:/cvs/gcc</code></blockquote>
 
 <p>Or alternately add 
-<blockquote<code>-d :pserver:anoncvs@anoncvs.cygnus.com:/cvs/gcc</code></blockquote>
+<blockquote><code>-d :pserver:anoncvs@anoncvs.cygnus.com:/cvs/gcc</code></blockquote>
 in the CVS commands below (place it immediately after <code>cvs</code>,
 i.e., before any other CVS arguments).
 
