--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -142,7 +142,16 @@ i
       <p>
       <dd>There is a known problem with the 
         <a href="http://egcs.cygnus.com/ml/gcc-bugs/1999-10/msg00159.html">
-        native Solaris linker</a> when using gcc/gcj.  A known workaround
+        native Solaris linker</a> when using gcc/gcj.
+	A good indication you've run into this problem is if you get
+	an error that looks like the following when building libgcj:
+	<pre>
+ld: warning: option -o appears more than once, first setting taken
+ld: fatal: file libfoo.so: cannot open file: No such file or directory
+ld: fatal: File processing errors. No output written to .libs/libfoo.so
+collect2: ld returned 1 exit status
+	</pre>
+	A known workaround
 	for this and other reported link problems on the various releases
 	of Solaris is to build gcc/gcj with the 
         <a href="ftp://sourceware.cygnus.com/pub/binutils/snapshots">
@@ -216,7 +225,7 @@ i
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: faq.html,v 1.3 1999/10/13 01:24:26 warrenl Exp $
+$Id: faq.html,v 1.4 1999/10/13 23:43:16 warrenl Exp $
 </small>
 </address>
 
