no goof mirrors & slight layout improvement

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -2,7 +2,9 @@
 <head>
 <title>GCC ftp mirror sites</title>
 </head>
-<body>
+
+<body bgcolor="white" text="black" link="#0000EE" vlink="#551A8B" alink="red">
+
 <h1 align="center">GCC mirror sites</h1>
 
 <h2><a name="mirrors">MIRROR LISTS</a></h2>
@@ -61,34 +63,23 @@ thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 <li>Turkey (Izmir): <a href="ftp://ftp://gcc.deu.edu.tr">gcc.deu.edu.tr</a>
 </ul>
 
-<p>These sites are mirroring <tt>ftp.goof.com</tt>'s site, so we get to mooch
-off of them.  Thanks to Marc Lehmann for mentioning this! Only the latest versions
-of the snapshots are mirrored here.
-
-<UL>
-<LI><A HREF="ftp://ftp.goof.com/pub/pcg/egcs/">US: Goof.COM (snapshots only)</A>, thanks to <A HREF="http://www.goof.com/~mmead/">Matthew C. Mead</A>!<BR>
-<LI><A HREF="ftp://mirror.aarnet.edu.au/pub/pcg/egcs/">AUSTRALIA: aarnet.edu (snapshots only)</A>, thanks to <A HREF="mailto:<mirror@mirror.aarnet.edu.au>">Paul Young / Jason Andrade</A>!<BR>
-<LI><A HREF="ftp://euler.mat.univ.szczecin.pl/pub/Linux/pgcc/egcs/">POLAND: euler.mat.univ.szczecin.pl (snapshots only)</A>, thanks to <A HREF="mailto:mkorz@euler.mat.univ.szczecin.pl">Marcin Korzonek</A>!<BR>
-<LI><A HREF="ftp://ftp.fu-berlin.de/unix/languages/pgcc/egcs/">GERMANY: ftp.fu-berlin.de (FU Berlin) (snapshots only)</A>, thanks to <A HREF="mailto:leitner@math.fu-berlin.de">Felix von Leitner</A>!<BR>
-<LI><A HREF="ftp://ftp.pmi.saitama-med.ac.jp/pub/pcg/egcs/">JAPAN: ftp.pmi.saitama-med.ac.jp (snapshots only)</A>, thanks to <A HREF="mailto:raraki@saitama-med.ac.jp">Ryuichiro Araki</A>!<BR>
-<LI><A HREF="ftp://ftp.u-aizu.ac.jp/pub/lang/C/pcg/egcs/">JAPAN: ftp.u-aizu.ac.jp (Aizu University) (snapshots only)</A>, thanks to <A HREF="mailto:takafumi@u-aizu.ac.jp">Takafumi Hayashi</A>!<BR>
-<LI><A HREF="ftp://ftp.hitachi-sk.co.jp/pub/pentium-gcc/egcs/">JAPAN: ftp.hitachi-sk.co.jp (Hitachi-Soft) (snapshots only)</A>, thanks to <A HREF="mailto:miya@aqu.hitachi-sk.co.jp">Yasuki Miyazaki</A>!<BR>
-<LI><A HREF="ftp://ftp.maisel.int-evry.fr/pub/pgcc/egcs/">FRANCE: ftp.minet.net (MINET)(snapshots only)</A>, thanks to <A HREF="http://www.minet.net/~olive/int/">Olivier Tharan</A>!<BR>
-</UL>
-
 <p>If you wish to host a new mirror site, please contact
 <a href="mailto:gcc@gcc.gnu.org">gcc@gcc.gnu.org</a>.  Include the
 name of the ftp server, the path to the GC mirror and the country/city
 where the mirror is located.
 
-<hr>
 <p><a href="index.html">Return to the GCC home page</a>
 
 <hr>
-<i>Last modified on September 20, 1999.</i>
+<address>
+<a href="about.html">The GCC team</a>
+<br>
+<small><i>Last modified on October 11, 1999.</i></small>
+</address>
 
 </body>
 </html>
+
 <!-- <li>US (Merrifield, VA): <a href="ftp://mirrors.rcn.com:/pub/egcs/">mirrors.rcn.com</a>! -->
 <!-- <LI>Taejon, Korea: <A HREF="ftp://cair-archive.kaist.ac.kr/pub/gnu/egcs">cair-archive.kaist.ac.kr</a>, thanks to <a href="mailto:ahmls@nmsvr.chosun.com">Ho-sun Lee</a>! -->
 <!-- <LI><A HREF="ftp://linux.colba.net/pub/pcg/egcs/">CANADA: linux.colba.net (Montreal) (snapshots only)</A>, thanks to <A HREF="mailto:draggy@kosmic.org">Nicolas St-Pierre</A>!<BR> -->
