Add g77/Craig Burley news item.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -105,6 +105,20 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>October 16, 1999</dt>
+<dd>
+<p>Craig Burley, our lead Fortran developer and the original author
+of g77, announced that he will stop working on g77 beyond the 2.95
+series.  On behalf of the entire GCC team, the steering committee
+would like to thank Craig for his work.</p>
+
+<p>Craig has written a <a  href="http://world.std.com/~burley/g77.html">
+detailed analysis of the current state and possible future</a> of g77.</p>
+
+<p>If you are interested in helping with g77, please <a
+href="mailto:gcc@gcc.gnu.org">contact us</a>!</p>
+</dd>
+
 <dt><b>October 12, 1999</b></dt>
 <dd>
 We are pleased to annouce Richard Earnshaw and Jason Merrill have been
@@ -156,7 +170,7 @@ Cygnus Solutions has donated two new global optimizers to GCC.
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on October 8, 1999.</i></small>
+<small><i>Last modified on October 16, 1999.</i></small>
 </address>
 
 </body>
