Add missing </b> tag.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -105,7 +105,7 @@ maintain and improve quality.
 
 <dl>
 
-<dt><b>October 16, 1999</dt>
+<dt><b>October 16, 1999</b></dt>
 <dd>
 <p>Craig Burley, our lead Fortran developer and the original author
 of g77, announced that he will stop working on g77 beyond the 2.95
