--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -10,6 +10,24 @@ home page</a>.
 
 <dl>
 
+<dt><b>September 21, 1999</b></dt>
+<dd>
+Nick Clifton of Cygnus Solutions has donated support for the Fujitsu
+FR30 processor.  The FR30 is a low-cost 32bit cpu intended for larger
+embedded applications.  It has a simple load/store architecture, 16
+general registers and a variable length instruction set.  Additional
+details about the FR30 can be found at
+<a href="http://www.fmap.com.sg/products/mcu_fr30.htm">Fujitsu's web
+site</a>.
+</dd>
+
+<dt><b>September 20, 1999</b></dt>
+<dd>
+Cygnus Solutions has donated two new global optimizers to GCC.
+<a href="news/null.html">Global Null Pointer Test Elimination</a> and
+<a href="news/unify.html">Global Code Hoisting/Unification</a>.
+</dd>
+
 <dt><b>September 3, 1999</b></dt>
 <dd>
 Long time GCC contributors Mark Mitchell and Richard Kenner have been
@@ -401,7 +419,7 @@ framework</b></a>.
 </dl>
 
 <hr>
-<i>Last modified on October 12, 1999.</i>
+<i>Last modified on October 16, 1999.</i>
 
 </body>
 </html>
