--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -16,7 +16,7 @@ available read-only to the public at large.
 (including released) or our <a href="#wwwdocs">web pages</a>.
 
 <p>In addition you can <a
-href="http://egcs.cygnus.com/cgi-bin/cvsweb.cgi/egcs/">browse our CVS
+href="http://egcs.cygnus.com/cgi-bin/cvsweb.cgi/">browse our CVS
 history online</a>.
 
 
@@ -96,7 +96,7 @@ the compiler itself.  Use <code>cvs co wwwdocs</code> to check out
 the web pages.
 
 <hr>
-<i>Last modified on 1999-10-09.</i>
+<i>Last modified on October 17, 1999</i>
 
 </body>
 </html>
