--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -112,11 +112,15 @@ of g77, announced that he will stop working on g77 beyond the 2.95
 series.  On behalf of the entire GCC team, the steering committee
 would like to thank Craig for his work.</p>
 
-<p>Craig has written a <a  href="http://world.std.com/~burley/g77.html">
-detailed analysis of the current state and possible future</a> of g77.</p>
+<p>Craig has written a detailed analysis of the
+<a href="http://world.std.com/~burley/g77-why.html">current state</a>
+and
+<a href="http://world.std.com/~burley/g77-next.html">possible future</a>
+of g77, available at his
+<a href="http://world.std.com/~burley/g77.html">g77 web site</a>.</p>
 
 <p>If you are interested in helping with g77, please <a
-href="mailto:gcc@gcc.gnu.org">contact us</a>!</p>
+href="mailto:gcc@gcc.gnu.org?subject=g77%20Help%20Wanted?">contact us</a>!</p>
 </dd>
 
 <dt><b>October 12, 1999</b></dt>
@@ -152,7 +156,7 @@ improvement work were and will be of great use.
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on October 16, 1999.</i></small>
+<small><i>Last modified on October 17, 1999.</i></small>
 </address>
 
 </body>
