Fix latest snapshot tag

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -81,7 +81,7 @@ you may want to check out include:
   <li> egcs_1_0_1_release
   <li> egcs_1_0_release
   <li> egcs_ss_yymmdd
-  <li> egcs_latest_snapshot
+  <li> gcc_latest_snapshot
   <li> new_ia32_branch
   <li> egcs_gc_branch
   <li> gnu-win32-b20-branch
@@ -96,7 +96,7 @@ the compiler itself.  Use <code>cvs co wwwdocs</code> to check out
 the web pages.
 
 <hr>
-<i>Last modified on October 17, 1999</i>
+<i>Last modified on October 19, 1999</i>
 
 </body>
 </html>
