--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -1028,7 +1028,7 @@ out the latest snapshot.</p>
 
 <p>We use CVS tags to identify each snapshot we make.  Snapshot tags have
 the form "egcs_ss_YYYYMMDD".  In addition, the latest official snapshot always
-has the tag "egcs_latest_snapshot".</p>
+has the tag "gcc_latest_snapshot".</p>
 
 
 <hr>
@@ -1139,7 +1139,7 @@ is declared pure-virtual [class.dtor]/7.</p>
 <hr>
 
 <p><a href="index.html">Return to the GCC home page</a></p>
-<p><i>Last modified:  October 2, 1999</i></p>
+<p><i>Last modified:  October 19, 1999</i></p>
 
 </body>
 </html>
