--- a/htdocs/gcc-2.95/gcc-2.95.2.html
+++ b/htdocs/gcc-2.95/gcc-2.95.2.html
@@ -19,7 +19,7 @@ release.
 
 <p>The -fstrict-aliasing is not enabled by default for GCC 2.95.2.  However,
 we <b>strongly</b> encourage developers to find and fix code which violates
-the C/C++ stanards as these optimizations may be enabled again in future
+the C/C++ standards as these optimizations may be enabled again in future
 releases.  Use the option -fstrict-aliasing to re-enable these optimizations.
 
 <p>
