Note interesting new tags in the CVS tree.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -72,6 +72,11 @@ particular releases or snapshots or the latest snapshot.  Other tags/branches
 you may want to check out include:
 
 <ul>
+  <li> gcc_latest_snapshot
+  <li> gcc_ss_yyyymmdd
+  <li> gcc-2_95_1-release
+  <li> gcc-2_95-release
+  <li> gcc-2_95-branch
   <li> egcs_1_1_2_release
   <li> egcs_1_1_1_release
   <li> egcs_1_1_release
@@ -80,10 +85,7 @@ you may want to check out include:
   <li> egcs_1_0_2_release
   <li> egcs_1_0_1_release
   <li> egcs_1_0_release
-  <li> egcs_ss_yymmdd
-  <li> gcc_latest_snapshot
-  <li> new_ia32_branch
-  <li> egcs_gc_branch
+  <li> egcs_ss_yyyymmdd	For snapshots prior to 19990913
   <li> gnu-win32-b20-branch
 </ul>
 
@@ -96,7 +98,7 @@ the compiler itself.  Use <code>cvs co wwwdocs</code> to check out
 the web pages.
 
 <hr>
-<i>Last modified on October 19, 1999</i>
+<i>Last modified on October 21, 1999</i>
 
 </body>
 </html>
