--- a/htdocs/gcc-2.95/gcc-2.95.2.html
+++ b/htdocs/gcc-2.95/gcc-2.95.2.html
@@ -52,7 +52,7 @@ releases.  Use the option -fstrict-aliasing to re-enable these optimizations.
 	<li>Fix sparc-hal-solaris2* configuration fragments.
 	<li>Fix obscure code generation bug for the PARISC targets.
 	<li>Define __STDC_EXT__ for HPUX configurations.
-	<li>Various POWERPC64 code generation bufixes.
+	<li>Various POWERPC64 code generation bugfixes.
 	<li>Fix abort for PPC targets using ELF (ex GNU/Linux).
 	<li>collect2 fixes for aix XXX Need clarification from dje.
 	<li>Correct handling of .file directive for PPC targets.
@@ -125,7 +125,7 @@ successful.
 <a href="mailto:gcc@gcc.gnu.org">GCC development mailing list</a>.
 
 <hr>
-<i>Last modified on October 21, 1999.</i>
+<i>Last modified on October 22, 1999.</i>
 
 </body>
 </html>
