Comment out go.cygnus.com mirror.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -14,7 +14,6 @@ gcc.gnu.org server is in California in the US.  Please let us know
 if you are mirroring the GCC pages so we can note it here!
 
 <ul>
-<li>US (Stanford): <a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/">go.cygnus.com</a>
 <li>US (California): <a href="ftp://ftp.yggdrasil.com/mirrors/site/egcs.cygnus.com/pub/egcs">ftp.yggdrasil.com</a>
 <li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/egcs/">gd.tuwien.ac.at</a>
 <li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/egcs/">gd.tuwien.ac.at</a>
@@ -74,7 +73,7 @@ where the mirror is located.
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on October 11, 1999.</i></small>
+<small><i>Last modified on October 23, 1999.</i></small>
 </address>
 
 </body>
@@ -96,3 +95,4 @@ where the mirror is located.
 <!-- <li>Japan: <a href="ftp://ftp.shonan.bunkyo.ac.jp/pub/lang/egcs">ftp.shonan.bunkyo.ac.jp</a> !-->
 <!-- <li>Russia (Moscow, partial):<a href="ftp://kiarchive.relcom.ru/pub/gnu/egcs/">kiarchive.relcom.ru</a> !-->
 <!-- <li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a> !-->
+<!--<li>US (Stanford): <a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/">go.cygnus.com</a> !-->
